<resources>
    <string name="app_name">TP4GP13</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="input_id">ID del articulo</string>
    <string name="input_nombre_producto">Nombre del Producto</string>
    <string name="input_stock">Stock del producto</string>
    <string name="categoria">Categoria</string>
    <string name="alta">Alta</string>
    <string name="modificacion">Modificacion</string>
    <string name="listado">Listado</string>
    <string name="input_id_modif">ID del producto a modificar</string>
    <string name="buscar">Buscar</string>
    <string name="Modificar">Modificar</string>
</resources>