<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ModificacionFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_buscar_producto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:background="#c8c3bc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/input_id_modif"
            android:layout_width="305dp"
            android:layout_height="48dp"
            android:hint="@string/input_id_modif"
            android:inputType="number"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="#132625"
            android:textColorHint="#132625"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/btn_buscar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/buscar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.833"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_id_modif" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/input_nombre_producto"
        android:layout_width="305dp"
        android:layout_height="48dp"
        android:layout_marginTop="92dp"
        android:hint="@string/input_nombre_producto"
        android:inputType="text"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="#132625"
        android:textColorHint="#132625"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container_buscar_producto"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/input_stock"
        android:layout_width="305dp"
        android:layout_height="48dp"
        android:hint="@string/input_stock"
        android:inputType="number"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="#132625"
        android:textColorHint="#132625"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_nombre_producto"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/tv_categoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="@string/categoria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.151"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_stock" />

    <Spinner
        android:id="@+id/spinner_categoria"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.251"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_categoria" />


    <Button
        android:id="@+id/btn_modificar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/Modificar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.771"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_categoria" />


</androidx.constraintlayout.widget.ConstraintLayout>
