<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.AltaFragment">

    <EditText
        android:id="@+id/input_id"
        android:layout_width="305dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:hint="@string/input_id"
        android:inputType="text"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="#132625"
        android:textColorHint="#132625"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/input_nombre_producto"
        android:layout_width="305dp"
        android:layout_height="48dp"
        android:layout_marginTop="56dp"
        android:hint="@string/input_nombre_producto"
        android:inputType="text"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="#132625"
        android:textColorHint="#132625"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_id"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/input_stock"
        android:layout_width="305dp"
        android:layout_height="48dp"
        android:layout_marginTop="56dp"
        android:hint="@string/input_stock"
        android:inputType="number"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="#132625"
        android:textColorHint="#132625"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_nombre_producto"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/tv_categoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="@string/categoria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.151"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_stock" />

    <Spinner
        android:id="@+id/spinner_categoria"
        android:layout_width="308dp"
        android:layout_height="32dp"
        android:layout_marginTop="108dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.798"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_stock" />

    <Button
        android:id="@+id/btn_Agregar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="AGREGAR"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_categoria"
        app:layout_constraintVertical_bias="0.25" />


</androidx.constraintlayout.widget.ConstraintLayout>
